--- a/install.text
+++ b/install.text
@@ -82,3 +82,5 @@ git clone https://github.com/arch3rPro/PentestTools
 git clone https://github.com/rajkumardusad/IP-Tracer
 
 git clone https://github.com/7Ragnarok7/DEDMAP
+
+git clone https://github.com/jackind424/onex
