--- a/install.text
+++ b/install.text
@@ -34,8 +34,9 @@ pkg i php
 pkg i rust
 pkg i tor
 pkg i proxychains-ng
-
-
+pkg i nmap
+pip install slowloris
+pip2 install python-ping
 pip install pycurl
 
 pip2 install python-geoip
